--- a/Quản lý bán hàng siêu thị/Quản lý bán hàng siêu thị.csproj
+++ b/Quản lý bán hàng siêu thị/Quản lý bán hàng siêu thị.csproj
@@ -47,6 +47,12 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="BangKhachHang.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="BangKhachHang.Designer.cs">
+      <DependentUpon>BangKhachHang.cs</DependentUpon>
+    </Compile>
     <Compile Include="BanHang.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -74,6 +80,9 @@
     <Compile Include="ThongKe.Designer.cs">
       <DependentUpon>ThongKe.cs</DependentUpon>
     </Compile>
+    <EmbeddedResource Include="BangKhachHang.resx">
+      <DependentUpon>BangKhachHang.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="BanHang.resx">
       <DependentUpon>BanHang.cs</DependentUpon>
     </EmbeddedResource>
