--- a/Quản lý bán hàng siêu thị/Quản lý bán hàng siêu thị.csproj
+++ b/Quản lý bán hàng siêu thị/Quản lý bán hàng siêu thị.csproj
@@ -72,6 +72,12 @@
     <Compile Include="FrmMain.Designer.cs">
       <DependentUpon>FrmMain.cs</DependentUpon>
     </Compile>
+    <Compile Include="NhanVien.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="NhanVien.Designer.cs">
+      <DependentUpon>NhanVien.cs</DependentUpon>
+    </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ThongKe.cs">
@@ -91,6 +97,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="FrmMain.resx">
       <DependentUpon>FrmMain.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="NhanVien.resx">
+      <DependentUpon>NhanVien.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
@@ -141,6 +150,24 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="Resources\tu-van-kinh-doanh-sieu-thi.jpg" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\if_sign-add_299068.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\ce.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\trash-32.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\close-32.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\cloud_refresh_1-32.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\system-search-32.png" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
